# libgit2

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml
include/: git2.h
include/git2/: commit.h  indexer.h  odb.h  odb_backend.h  refdb_backend.h  repository.h  rx.h  task.h  transaction.h  transport.h  types.h
include/git2/sys/: odb_backend.h  refdb_backend.h  stream.h
src/: array.c  array.h  blame.c  clone.c  commit.c  config.c  error.rs  fetch.c  filebuf.c  idxbtree.h  index.c  index.h  indexer.c  kbtree.h  lib.rs  libssh2_stream.c  libssh2_stream.h  netops.c  odb.c  odb.h  odb_loose.c  odb_pack.c  openssl_stream.c  openssl_stream.h  pack-objects.c  pack.c  pqueue.c  refdb.c  refdb.h  refdb_fs.c  refdb_sqlite.c  refdb_sqlite.h  refs.c  refs.h  remote.c  repository.c  revwalk.c  rx.c  rx.h  socket_stream.c  (+8 more)
src/stream/: mod.rs  socket.rs
src/transports/: http.c  http.rs  mod.rs  ssh.c  winhttp.c
src/win32/: map.c
tests-clar/network/: fetch.c
tests-clar/refdb/: sqlitedb.c
tests-clar/repo/: discover.c  message.c  state.c
tests-clay/: clay.h  clay_main.c
tests-clay/index/: rename.c
tests/core/: rx.c
tests/object/tree/: read.c
tests/odb/: tracing.c
tests/online/: fetch.c
tests/refs/: parallel.c  transactions.c
tests/revwalk/: basic.c
tests/stash/: drop.c
