[package]
name = "libgit2-rust-core"
version = "0.1.0"
authors = ["cmn@dwim.me"]

[lib]
name ="git2core"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
url = "1.2.3"
lazy_static = "0.2"

[dependencies.hyper]
version = "0.9"
# Don't try to build with OpenSSL, we'll handle it ourselves
default-features = false
